--- a/requirements.txt
+++ b/requirements.txt
@@ -1,207 +1,248 @@
-absl-py @ file:///C:/b/abs_5babsu7y5x/croot/absl-py_1666362945682/work
-aioice==0.9.0
-aiortc==1.5.0
-altair==4.2.2
-anyio @ file:///C:/ci/anyio_1644463705902/work/dist
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///C:/ci/argon2-cffi-bindings_1644569848815/work
-astor==0.8.1
-astunparse==1.6.3
-attrs @ file:///C:/b/abs_09s3y775ra/croot/attrs_1668696195628/work
-av==10.0.0
-Babel @ file:///C:/b/abs_a2shv_3tqi/croot/babel_1671782804377/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-backports.zoneinfo==0.2.1
-base58==2.1.1
-beautifulsoup4 @ file:///C:/ci/beautifulsoup4_1650292996413/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-blinker==1.6.2
-Bottleneck @ file:///C:/Windows/Temp/abs_3198ca53-903d-42fd-87b4-03e6d03a8381yfwsuve8/croots/recipe/bottleneck_1657175565403/work
-brotlipy==0.7.0
-cachetools==5.3.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
-cffi @ file:///C:/b/abs_49n3v2hyhr/croot/cffi_1670423218144/work
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-click==7.1.2
-colorama @ file:///C:/b/abs_a9ozq0l032/croot/colorama_1672387194846/work
-conda==23.1.0
-conda-package-handling @ file:///C:/b/abs_fcga8w0uem/croot/conda-package-handling_1672865024290/work
-conda_package_streaming @ file:///C:/b/abs_0e5n5hdal3/croot/conda-package-streaming_1670508162902/work
-cryptography @ file:///C:/b/abs_8ecplyc3n2/croot/cryptography_1677533105000/work
-cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
-debugpy @ file:///C:/ci/debugpy_1637091911212/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distlib==0.3.6
-dnspython==2.3.0
-docopt==0.6.2
-efficientnet==1.0.0
-entrypoints @ file:///C:/ci/entrypoints_1649926659561/work
-fastjsonschema @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_ebruxzvd08/croots/recipe/python-fastjsonschema_1661376484940/work
-filelock==3.12.0
-flatbuffers==23.3.3
-flit_core @ file:///opt/conda/conda-bld/flit-core_1644941570762/work/source/flit_core
-fonttools==4.25.0
-gast @ file:///tmp/build/80754af9/gast_1637837472536/work
-gitdb==4.0.10
-GitPython==3.1.31
-google-auth==2.17.3
-google-auth-oauthlib==0.4.6
-google-crc32c==1.5.0
-google-pasta @ file:///Users/ktietz/demo/mc3/conda-bld/google-pasta_1630577991354/work
-grpcio @ file:///C:/ci/grpcio_1637590993074/work
-h5py==2.10.0
-idna @ file:///C:/b/abs_bdhbebrioa/croot/idna_1666125572046/work
-ifaddr==0.2.0
-image-classifiers==1.0.0
-imageio==2.28.0
-importlib-metadata==6.6.0
-importlib-resources @ file:///tmp/build/80754af9/importlib_resources_1625135880749/work
-ipykernel @ file:///C:/b/abs_21ykzkm7y_/croots/recipe/ipykernel_1662361803478/work
-ipython @ file:///C:/Windows/TEMP/abs_45b5zb1l7q/croots/recipe/ipython_1659529855872/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1634143127070/work
-jedi @ file:///C:/ci/jedi_1644297241925/work
-Jinja2 @ file:///C:/b/abs_7cdis66kl9/croot/jinja2_1666908141852/work
-joblib @ file:///C:/b/abs_e60_bwl1v6/croot/joblib_1666298845728/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonschema @ file:///C:/b/abs_6ccs97j_l8/croot/jsonschema_1676558690963/work
-jupyter @ file:///C:/Windows/TEMP/abs_56xfdi__li/croots/recipe/jupyter_1659349053177/work
-jupyter-console @ file:///opt/conda/conda-bld/jupyter_console_1647002188872/work
-jupyter-server @ file:///C:/b/abs_1cfi3__jl8/croot/jupyter_server_1671707636383/work
-jupyter_client @ file:///C:/b/abs_d8fk_kz9zk/croot/jupyter_client_1676330195659/work
-jupyter_core @ file:///C:/b/abs_b8r5lb5eus/croot/jupyter_core_1668084445779/work
-jupyterlab @ file:///C:/b/abs_513jt6yy74/croot/jupyterlab_1675354138043/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-jupyterlab_server @ file:///C:/b/abs_d1z_g1swc8/croot/jupyterlab_server_1677153204814/work
-keras==2.8.0
-Keras-Applications @ file:///tmp/build/80754af9/keras-applications_1594366238411/work
-Keras-Preprocessing @ file:///tmp/build/80754af9/keras-preprocessing_1612283640596/work
-kiwisolver @ file:///C:/b/abs_88mdhvtahm/croot/kiwisolver_1672387921783/work
-libclang==16.0.0
-lxml @ file:///C:/ci/lxml_1657509249535/work
-Markdown @ file:///C:/b/abs_98lv_ucina/croot/markdown_1671541919225/work
-markdown-it-py==2.2.0
-MarkupSafe @ file:///C:/ci/markupsafe_1654508076077/work
-matplotlib-inline @ file:///C:/ci/matplotlib-inline_1661934089728/work
-mdurl==0.1.2
-mediapipe==0.9.0.1
-menuinst @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_455sf5o0ct/croots/recipe/menuinst_1661805970842/work
-mistune @ file:///C:/ci/mistune_1594373272338/work
-mkl-fft==1.3.1
-mkl-random @ file:///C:/ci/mkl_random_1626186163140/work
-mkl-service==2.4.0
-munkres==1.1.4
-mysql-connector-python==8.0.21
-nbclassic @ file:///C:/b/abs_d0_ze5q0j2/croot/nbclassic_1676902914817/work
-nbclient @ file:///C:/ci/nbclient_1650308542913/work
-nbconvert @ file:///C:/b/abs_4av3q4okro/croot/nbconvert_1668450658054/work
-nbformat @ file:///C:/b/abs_85_3g7dkt4/croot/nbformat_1670352343720/work
-nest-asyncio @ file:///C:/b/abs_3a_4jsjlqu/croot/nest-asyncio_1672387322800/work
-networkx==2.6.3
-notebook @ file:///C:/b/abs_ca13hqvuzw/croot/notebook_1668179888546/work
-notebook_shim @ file:///C:/b/abs_ebfczttg6x/croot/notebook-shim_1668160590914/work
-numexpr @ file:///C:/b/abs_a7kbak88hk/croot/numexpr_1668713882979/work
-numpy==1.21.6
-oauthlib==3.2.2
-opencv-contrib-python==4.7.0.72
-opencv-python==4.7.0.72
-opt-einsum==3.3.0
-packaging @ file:///C:/b/abs_cfsup8ur87/croot/packaging_1671697442297/work
-pandas @ file:///C:/ci/pandas_1635506714241/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-Pillow==9.4.0
-pipenv==2023.4.29
-pipreqs==0.4.13
-pkgutil_resolve_name @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_81wm45v3kb/croots/recipe/pkgutil-resolve-name_1661463352381/work
-platformdirs==3.5.0
-pluggy @ file:///C:/ci/pluggy_1648042781630/work
-ply==3.11
-prometheus-client @ file:///C:/Windows/TEMP/abs_ab9nx8qb08/croots/recipe/prometheus_client_1659455104602/work
-prompt-toolkit @ file:///C:/b/abs_6coz5_9f2s/croot/prompt-toolkit_1672387908312/work
-protobuf==3.20.3
-psutil @ file:///C:/Windows/Temp/abs_b2c2fd7f-9fd5-4756-95ea-8aed74d0039flsd9qufz/croots/recipe/psutil_1656431277748/work
-pyarrow==11.0.0
-pyasn1==0.5.0
-pyasn1-modules==0.3.0
-pycosat @ file:///C:/b/abs_4b1rrw8pn9/croot/pycosat_1666807711599/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydeck==0.8.1b0
-pyee==9.0.4
-Pygments==2.15.1
-pylibsrtp==0.8.0
-Pympler==1.0.1
-pyOpenSSL==23.1.1
-pyparsing @ file:///C:/Users/BUILDE~1/AppData/Local/Temp/abs_7f_7lba6rl/croots/recipe/pyparsing_1661452540662/work
-PyQt5==5.15.7
-PyQt5-sip @ file:///C:/Windows/Temp/abs_d7gmd2jg8i/croots/recipe/pyqt-split_1659273064801/work/pyqt_sip
-pyrsistent @ file:///C:/ci/pyrsistent_1636093257833/work
-PySocks @ file:///C:/ci/pysocks_1594394709107/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///C:/b/abs_22fofvpn1x/croot/pytz_1671698059864/work
-pytz-deprecation-shim==0.1.0.post0
-PyWavelets==1.3.0
-pywin32==305.1
-pywinpty @ file:///C:/b/abs_73vshmevwq/croot/pywinpty_1677609966356/work/target/wheels/pywinpty-2.0.10-cp37-none-win_amd64.whl
-pyzmq @ file:///C:/ci/pyzmq_1657597757589/work
-qtconsole @ file:///C:/b/abs_5bap7f8n0t/croot/qtconsole_1674008444833/work
-QtPy @ file:///C:/ci/qtpy_1662015131946/work
-requests @ file:///C:/ci/requests_1657735288441/work
-requests-oauthlib==1.3.1
-rich==13.3.5
-rsa==4.9
-ruamel.yaml @ file:///C:/b/abs_30ee5qbthd/croot/ruamel.yaml_1666304562000/work
-ruamel.yaml.clib @ file:///C:/b/abs_aarblxbilo/croot/ruamel.yaml.clib_1666302270884/work
-scikit-image==0.19.3
-scikit-learn @ file:///C:/ci/scikit-learn_1635187438800/work
-scipy @ file:///C:/ci/scipy_1661333074914/work
-segmentation-models==1.0.1
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-sip @ file:///C:/Windows/Temp/abs_b8fxd17m2u/croots/recipe/sip_1659012372737/work
-six==1.16.0
-smmap==5.0.0
-sniffio @ file:///C:/ci/sniffio_1614030522573/work
-soupsieve @ file:///C:/b/abs_fasraqxhlv/croot/soupsieve_1666296394662/work
-streamlit==1.22.0
-streamlit-webrtc==0.44.7
-tenacity==8.2.2
-tensorboard==2.8.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.1
-tensorflow-estimator==2.8.0
-tensorflow-gpu==2.8.1
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor @ file:///C:/b/abs_16qe7jhw7n/croot/termcolor_1668084642458/work
-terminado @ file:///C:/b/abs_25nakickad/croot/terminado_1671751845491/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tifffile==2021.11.2
-tinycss2 @ file:///C:/b/abs_52w5vfuaax/croot/tinycss2_1668168823131/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomli @ file:///C:/Windows/TEMP/abs_ac109f85-a7b3-4b4d-bcfd-52622eceddf0hy332ojo/croots/recipe/tomli_1657175513137/work
-toolz @ file:///C:/b/abs_cfvk6rc40d/croot/toolz_1667464080130/work
-tornado @ file:///C:/ci/tornado_1662476933490/work
-tqdm @ file:///C:/b/abs_0axbz66qik/croots/recipe/tqdm_1664392691071/work
-traitlets @ file:///C:/b/abs_e5m_xjjl94/croot/traitlets_1671143896266/work
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==4.3
-urllib3 @ file:///C:/b/abs_9bcwxczrvm/croot/urllib3_1673575521331/work
-validators==0.20.0
-virtualenv==20.23.0
-virtualenv-clone==0.5.7
-watchdog==3.0.0
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///C:/ci/websocket-client_1614804293275/work
-Werkzeug @ file:///C:/b/abs_17q5kgb8bo/croot/werkzeug_1671216014857/work
-widgetsnbextension @ file:///C:/ci/widgetsnbextension_1645009553925/work
-win-inet-pton @ file:///C:/ci/win_inet_pton_1605306165655/work
-wincertstore==0.2
-wrapt @ file:///C:/Windows/Temp/abs_7c3dd407-1390-477a-b542-fd15df6a24085_diwiza/croots/recipe/wrapt_1657814452175/work
-yarg==0.1.9
-zipp @ file:///C:/b/abs_b9jfdr908q/croot/zipp_1672387552360/work
-zstandard==0.19.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+absl-py=1.3.0=py37haa95532_0
+aioice=0.9.0=pypi_0
+aiortc=1.5.0=pypi_0
+altair=4.2.2=pypi_0
+anyio=3.5.0=py37haa95532_0
+argon2-cffi=21.3.0=pyhd3eb1b0_0
+argon2-cffi-bindings=21.2.0=py37h2bbff1b_0
+astor=0.8.1=py37haa95532_0
+attrs=22.1.0=py37haa95532_0
+av=10.0.0=pypi_0
+babel=2.11.0=py37haa95532_0
+backcall=0.2.0=pyhd3eb1b0_0
+backports-zoneinfo=0.2.1=pypi_0
+base58=2.1.1=pypi_0
+beautifulsoup4=4.11.1=py37haa95532_0
+blas=1.0=mkl
+bleach=4.1.0=pyhd3eb1b0_0
+blinker=1.6.2=pypi_0
+bottleneck=1.3.5=py37h080aedc_0
+brotli=1.0.9=h2bbff1b_7
+brotli-bin=1.0.9=h2bbff1b_7
+brotlipy=0.7.0=py37h2bbff1b_1003
+ca-certificates=2023.01.10=haa95532_0
+cachetools=5.3.0=pypi_0
+certifi=2022.12.7=py37haa95532_0
+cffi=1.15.1=py37h2bbff1b_3
+charset-normalizer=2.0.4=pyhd3eb1b0_0
+click=7.1.2=pypi_0
+colorama=0.4.6=py37haa95532_0
+conda=23.1.0=py37haa95532_0
+conda-package-handling=2.0.2=py37haa95532_0
+conda-package-streaming=0.7.0=py37haa95532_0
+console_shortcut=0.1.1=4
+cryptography=39.0.1=py37h21b164f_0
+cycler=0.11.0=pyhd3eb1b0_0
+debugpy=1.5.1=py37hd77b12b_0
+decorator=5.1.1=pyhd3eb1b0_0
+defusedxml=0.7.1=pyhd3eb1b0_0
+dnspython=2.3.0=pypi_0
+docopt=0.6.2=pypi_0
+entrypoints=0.4=py37haa95532_0
+fftw=3.3.9=h2bbff1b_1
+flatbuffers=23.3.3=pypi_0
+flit-core=3.6.0=pyhd3eb1b0_0
+fonttools=4.25.0=pyhd3eb1b0_0
+freetype=2.12.1=ha860e81_0
+gast=0.5.3=pyhd3eb1b0_0
+giflib=5.2.1=h8cc25b3_3
+gitdb=4.0.10=pypi_0
+gitpython=3.1.31=pypi_0
+glib=2.69.1=h5dc1a3c_2
+google-crc32c=1.5.0=pypi_0
+google-pasta=0.2.0=pyhd3eb1b0_0
+grpcio=1.42.0=py37hc60d5dd_0
+gst-plugins-base=1.18.5=h9e645db_0
+gstreamer=1.18.5=hd78058f_0
+h5py=2.10.0=pypi_0
+hdf5=1.10.6=h1756f20_1
+icc_rt=2022.1.0=h6049295_2
+icu=58.2=ha925a31_3
+idna=3.4=py37haa95532_0
+ifaddr=0.2.0=pypi_0
+importlib-metadata=4.11.3=py37haa95532_0
+importlib_metadata=4.11.3=hd3eb1b0_0
+importlib_resources=5.2.0=pyhd3eb1b0_1
+intel-openmp=2021.4.0=haa95532_3556
+ipykernel=6.15.2=py37haa95532_0
+ipython=7.31.1=py37haa95532_1
+ipython_genutils=0.2.0=pyhd3eb1b0_1
+ipywidgets=7.6.5=pyhd3eb1b0_1
+jedi=0.18.1=py37haa95532_1
+jinja2=3.1.2=py37haa95532_0
+joblib=1.1.1=py37haa95532_0
+jpeg=9e=h2bbff1b_1
+json5=0.9.6=pyhd3eb1b0_0
+jsonschema=4.17.3=py37haa95532_0
+jupyter=1.0.0=py37haa95532_8
+jupyter_client=7.4.9=py37haa95532_0
+jupyter_console=6.4.3=pyhd3eb1b0_0
+jupyter_core=4.11.2=py37haa95532_0
+jupyter_server=1.23.4=py37haa95532_0
+jupyterlab=3.5.3=py37haa95532_0
+jupyterlab_pygments=0.1.2=py_0
+jupyterlab_server=2.19.0=py37haa95532_0
+jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+keras=2.8.0=pypi_0
+keras-applications=1.0.8=py_1
+keras-preprocessing=1.1.2=pyhd3eb1b0_0
+kiwisolver=1.4.4=py37hd77b12b_0
+krb5=1.19.4=h5b6d351_0
+lerc=3.0=hd77b12b_0
+libbrotlicommon=1.0.9=h2bbff1b_7
+libbrotlidec=1.0.9=h2bbff1b_7
+libbrotlienc=1.0.9=h2bbff1b_7
+libclang=16.0.0=pypi_0
+libclang13=14.0.6=default_h8e68704_1
+libdeflate=1.17=h2bbff1b_0
+libffi=3.4.2=hd77b12b_6
+libiconv=1.16=h2bbff1b_2
+libogg=1.3.5=h2bbff1b_1
+libpng=1.6.39=h8cc25b3_0
+libprotobuf=3.20.3=h23ce68f_0
+libsodium=1.0.18=h62dcd97_0
+libtiff=4.5.0=h6c2663c_2
+libvorbis=1.3.7=he774522_0
+libwebp=1.2.4=hbc33d0d_1
+libwebp-base=1.2.4=h2bbff1b_1
+libxml2=2.9.14=h0ad7f3c_0
+libxslt=1.1.35=h2bbff1b_0
+lxml=4.9.1=py37h1985fb9_0
+lz4-c=1.9.4=h2bbff1b_0
+markdown=3.4.1=py37haa95532_0
+markdown-it-py=2.2.0=pypi_0
+markupsafe=2.1.1=py37h2bbff1b_0
+matplotlib=3.5.3=pypi_0
+matplotlib-inline=0.1.6=py37haa95532_0
+mdurl=0.1.2=pypi_0
+menuinst=1.4.19=py37h59b6b97_0
+mistune=0.8.4=py37hfa6e2cd_1001
+mkl=2021.4.0=haa95532_640
+mkl-service=2.4.0=py37h2bbff1b_0
+mkl_fft=1.3.1=py37h277e83a_0
+mkl_random=1.2.2=py37hf11a4ad_0
+munkres=1.1.4=py_0
+mysql-connector-python=8.0.21=pypi_0
+nbclassic=0.5.2=py37haa95532_0
+nbclient=0.5.13=py37haa95532_0
+nbconvert=6.5.4=py37haa95532_0
+nbformat=5.7.0=py37haa95532_0
+nest-asyncio=1.5.6=py37haa95532_0
+notebook=6.5.2=py37haa95532_0
+notebook-shim=0.2.2=py37haa95532_0
+numexpr=2.8.4=py37h5b0cc5e_0
+numpy=1.21.6=pypi_0
+opencv-python=4.7.0.72=pypi_0
+openssl=1.1.1t=h2bbff1b_0
+opt-einsum=3.3.0=pypi_0
+packaging=22.0=py37haa95532_0
+pandas=1.3.4=py37h6214cd6_0
+pandocfilters=1.5.0=pyhd3eb1b0_0
+parso=0.8.3=pyhd3eb1b0_0
+pcre=8.45=hd77b12b_0
+pickleshare=0.7.5=pyhd3eb1b0_1003
+pillow=9.4.0=py37hd77b12b_0
+pip=23.1.2=pypi_0
+pipreqs=0.4.13=pypi_0
+pkgutil-resolve-name=1.3.10=py37haa95532_0
+pluggy=1.0.0=py37haa95532_1
+ply=3.11=py37_0
+powershell_shortcut=0.0.1=3
+prometheus_client=0.14.1=py37haa95532_0
+prompt-toolkit=3.0.36=py37haa95532_0
+prompt_toolkit=3.0.36=hd3eb1b0_0
+protobuf=3.20.3=py37hd77b12b_0
+psutil=5.9.0=py37h2bbff1b_0
+pyarrow=11.0.0=pypi_0
+pyasn1=0.5.0=pypi_0
+pycosat=0.6.4=py37h2bbff1b_0
+pycparser=2.21=pyhd3eb1b0_0
+pydeck=0.8.1b0=pypi_0
+pyee=9.0.4=pypi_0
+pygments=2.15.1=pypi_0
+pylibsrtp=0.8.0=pypi_0
+pympler=1.0.1=pypi_0
+pyopenssl=23.1.1=pypi_0
+pyparsing=3.0.9=py37haa95532_0
+pyqt=5.15.7=py37hd77b12b_0
+pyqt5-sip=12.11.0=py37hd77b12b_0
+pyrsistent=0.18.0=py37h196d8e1_0
+pysocks=1.7.1=py37_1
+python=3.7.16=h6244533_0
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python-fastjsonschema=2.16.2=py37haa95532_0
+python_abi=3.7=1_cp37m
+pytz=2022.7=py37haa95532_0
+pytz-deprecation-shim=0.1.0.post0=pypi_0
+pywin32=305=py37h2bbff1b_0
+pywinpty=2.0.10=py37h5da7b33_0
+pyzmq=23.2.0=py37hd77b12b_0
+qt-main=5.15.2=he8e5bd7_8
+qt-webengine=5.15.9=hb9a9bb5_5
+qtconsole=5.4.0=py37haa95532_0
+qtpy=2.2.0=py37haa95532_0
+qtwebkit=5.212=h3ad3cdb_4
+requests=2.28.1=py37haa95532_0
+rich=13.3.5=pypi_0
+ruamel.yaml=0.17.21=py37h2bbff1b_0
+ruamel.yaml.clib=0.2.6=py37h2bbff1b_1
+scikit-learn=1.0.1=py37hf11a4ad_0
+scipy=1.7.3=py37h7a0a035_2
+send2trash=1.8.0=pyhd3eb1b0_1
+setuptools=65.6.3=py37haa95532_0
+sip=6.6.2=py37hd77b12b_0
+six=1.16.0=pyhd3eb1b0_1
+smmap=5.0.0=pypi_0
+sniffio=1.2.0=py37haa95532_1
+soupsieve=2.3.2.post1=py37haa95532_0
+sqlite=3.41.2=h2bbff1b_0
+streamlit=1.22.0=pypi_0
+streamlit-webrtc=0.44.7=pypi_0
+tenacity=8.2.2=pypi_0
+tensorboard=1.14.0=py37he3c9ec2_0
+tensorboard-data-server=0.6.1=pypi_0
+tensorboard-plugin-wit=1.8.1=pypi_0
+tensorflow=1.14.0=h1f41ff6_0
+tensorflow-base=1.14.0=py37hc8dfbb8_0
+tensorflow-estimator=2.8.0=pypi_0
+tensorflow-io-gcs-filesystem=0.31.0=pypi_0
+termcolor=2.1.0=py37haa95532_0
+terminado=0.17.1=py37haa95532_0
+threadpoolctl=2.2.0=pyh0d69192_0
+tinycss2=1.2.1=py37haa95532_0
+tk=8.6.12=h2bbff1b_0
+toml=0.10.2=pyhd3eb1b0_0
+tomli=2.0.1=py37haa95532_0
+toolz=0.12.0=py37haa95532_0
+tornado=6.2=py37h2bbff1b_0
+tqdm=4.64.1=py37haa95532_0
+traitlets=5.7.1=py37haa95532_0
+typing-extensions=4.4.0=py37haa95532_0
+typing_extensions=4.4.0=py37haa95532_0
+tzdata=2023.3=pypi_0
+tzlocal=4.3=pypi_0
+urllib3=1.26.14=py37haa95532_0
+validators=0.20.0=pypi_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+watchdog=3.0.0=pypi_0
+wcwidth=0.2.5=pyhd3eb1b0_0
+webencodings=0.5.1=py37_1
+websocket-client=0.58.0=py37haa95532_4
+werkzeug=2.2.2=py37haa95532_0
+wheel=0.38.4=py37haa95532_0
+widgetsnbextension=3.5.2=py37haa95532_0
+win_inet_pton=1.1.0=py37haa95532_0
+wincertstore=0.2=py37haa95532_2
+winpty=0.4.3=4
+wrapt=1.14.1=py37h2bbff1b_0
+xz=5.2.10=h8cc25b3_1
+yarg=0.1.9=pypi_0
+zeromq=4.3.4=hd77b12b_0
+zipp=3.11.0=py37haa95532_0
+zlib=1.2.13=h8cc25b3_0
+zstandard=0.19.0=py37h2bbff1b_0
+zstd=1.5.5=hd43e919_0
